// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data-dependency export-expression: export-expression 1`] = `
"import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

export default (
  <Route
    path=\\"/trips-viewer\\"
    component={AppContainer}
    trackingId=\\"Home\\"
    dataDependency=\\"getUser\\"
  >
    <IndexRedirect to=\\"trips\\" />
    <Route
      path=\\"trips\\"
      component={TripsContainer}
      trackingId=\\"Trips\\"
      dataDependency=\\"getTrips\\"
    >
      <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
    </Route>
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import {prepared} from 'fusion-react-async';
import {connect} from 'react-redux';
import {createRPCPromise} from '@uber/web-rpc-redux';
import {compose} from 'redux';
import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const getTrips = () => {
  return createRPCPromise('getTrips');
};

const _TripsContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getTrips,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getTrips();
  })
)(TripsContainer);

const getUser = () => {
  return createRPCPromise('getUser');
};

const _AppContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getUser,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getUser();
  })
)(AppContainer);

export default (
  <Route
    path=\\"/trips-viewer\\"
    component={_AppContainerWithData}
    trackingId=\\"Home\\"
    dataDependency=\\"getUser\\"
  >
    <IndexRedirect to=\\"trips\\" />
    <Route
      path=\\"trips\\"
      component={_TripsContainerWithData}
      trackingId=\\"Trips\\"
      dataDependency=\\"getTrips\\"
    >
      <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
    </Route>
  </Route>
);
"
`;

exports[`data-dependency identifier: identifier 1`] = `
"import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const thing = 'test';
const rpcIds = {
  getUser: 'getUser',
  getTrips: 'getTrips',
};

export default function() {
  const routes = (
    <Route
      path=\\"/trips-viewer\\"
      component={AppContainer}
      trackingId=\\"Home\\"
      dataDependency={rpcIds.getUser}
    >
      <IndexRedirect to=\\"trips\\" />
      <Route
        path=\\"trips\\"
        component={TripsContainer}
        trackingId=\\"Trips\\"
        dataDependency={rpcIds.getTrips}
      >
        <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
      </Route>
    </Route>
  );
}


      ↓ ↓ ↓ ↓ ↓ ↓

import {prepared} from 'fusion-react-async';
import {connect} from 'react-redux';
import {createRPCPromise} from '@uber/web-rpc-redux';
import {compose} from 'redux';
import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const getTrips = () => {
  return createRPCPromise(rpcIds.getTrips);
};

const _TripsContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getTrips,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props[rpcIds.getTrips]();
  })
)(TripsContainer);

const getUser = () => {
  return createRPCPromise(rpcIds.getUser);
};

const _AppContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getUser,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props[rpcIds.getUser]();
  })
)(AppContainer);

const thing = 'test';
const rpcIds = {
  getUser: 'getUser',
  getTrips: 'getTrips',
};
export default function() {
  const routes = (
    <Route
      path=\\"/trips-viewer\\"
      component={_AppContainerWithData}
      trackingId=\\"Home\\"
      dataDependency={rpcIds.getUser}
    >
      <IndexRedirect to=\\"trips\\" />
      <Route
        path=\\"trips\\"
        component={_TripsContainerWithData}
        trackingId=\\"Trips\\"
        dataDependency={rpcIds.getTrips}
      >
        <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
      </Route>
    </Route>
  );
}
"
`;

exports[`data-dependency variable-declaration: variable-declaration 1`] = `
"import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const routes = (
  <Route
    path=\\"/trips-viewer\\"
    component={AppContainer}
    trackingId=\\"Home\\"
    dataDependency=\\"getUser\\"
  >
    <IndexRedirect to=\\"trips\\" />
    <Route
      path=\\"trips\\"
      component={TripsContainer}
      trackingId=\\"Trips\\"
      dataDependency=\\"getTrips\\"
    >
      <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
    </Route>
  </Route>
);


      ↓ ↓ ↓ ↓ ↓ ↓

import {prepared} from 'fusion-react-async';
import {connect} from 'react-redux';
import {createRPCPromise} from '@uber/web-rpc-redux';
import {compose} from 'redux';
import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const getTrips = () => {
  return createRPCPromise('getTrips');
};

const _TripsContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getTrips,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getTrips();
  })
)(TripsContainer);

const getUser = () => {
  return createRPCPromise('getUser');
};

const _AppContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getUser,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getUser();
  })
)(AppContainer);

const routes = (
  <Route
    path=\\"/trips-viewer\\"
    component={_AppContainerWithData}
    trackingId=\\"Home\\"
    dataDependency=\\"getUser\\"
  >
    <IndexRedirect to=\\"trips\\" />
    <Route
      path=\\"trips\\"
      component={_TripsContainerWithData}
      trackingId=\\"Trips\\"
      dataDependency=\\"getTrips\\"
    >
      <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
    </Route>
  </Route>
);
"
`;

exports[`data-dependency wrapped-in-function: wrapped-in-function 1`] = `
"import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const thing = 'test';

export default function() {
  const routes = (
    <Route
      path=\\"/trips-viewer\\"
      component={AppContainer}
      trackingId=\\"Home\\"
      dataDependency=\\"getUser\\"
    >
      <IndexRedirect to=\\"trips\\" />
      <Route
        path=\\"trips\\"
        component={TripsContainer}
        trackingId=\\"Trips\\"
        dataDependency=\\"getTrips\\"
      >
        <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
      </Route>
    </Route>
  );
}


      ↓ ↓ ↓ ↓ ↓ ↓

import {prepared} from 'fusion-react-async';
import {connect} from 'react-redux';
import {createRPCPromise} from '@uber/web-rpc-redux';
import {compose} from 'redux';
import React from 'react';
import {Route, IndexRedirect} from 'react-router';
import AppContainer from '../containers/app-container';
import TripsContainer from '../containers/trips-container';

const getTrips = () => {
  return createRPCPromise('getTrips');
};

const _TripsContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getTrips,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getTrips();
  })
)(TripsContainer);

const getUser = () => {
  return createRPCPromise('getUser');
};

const _AppContainerWithData = compose(
  connect(
    state => {
      // TODO: get things from state you need here
      return {};
    },
    {
      getUser,
    }
  ),
  prepared(props => {
    // TODO: You probably want to add a check to see if the data exists, or is loading.
    // See https://engdocs.uberinternal.com/web/docs/guides/fetching-data/#use-rpc-method-in-a-component
    return props.getUser();
  })
)(AppContainer);

const thing = 'test';
export default function() {
  const routes = (
    <Route
      path=\\"/trips-viewer\\"
      component={_AppContainerWithData}
      trackingId=\\"Home\\"
      dataDependency=\\"getUser\\"
    >
      <IndexRedirect to=\\"trips\\" />
      <Route
        path=\\"trips\\"
        component={_TripsContainerWithData}
        trackingId=\\"Trips\\"
        dataDependency=\\"getTrips\\"
      >
        <Route path=\\":tripUUID\\" component={TripContainer} trackingId=\\"Trip\\" />
      </Route>
    </Route>
  );
}
"
`;
